--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.1",
     "react-sticky-nav": "^4.0.6",
     "uniqid": "^5.4.0",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^3.2.2",
     "react-router-dom": "^6.3.0"
   }
 }
