--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.2.2",
+    "nodemon": "^2.0.19",
     "react-router-dom": "^6.3.0"
   }
 }
