--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://salemiana.github.io/react-folio/",
   "name": "react-folio",
   "version": "0.1.0",
   "private": true,
@@ -22,17 +23,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+
   "browserslist": {
     "production": [
       ">0.2%",
@@ -47,6 +45,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.2.2",
+    "gh-pages": "^4.0.0",
     "nodemon": "^2.0.19",
     "react-router-dom": "^6.3.0"
   }
