--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -26,7 +29,6 @@
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
- 
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
