--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
@@ -14,6 +12,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,7 +25,7 @@
     "react-dom": "^17.0.0",
     "react-loaders": "^3.0.1",
     "react-pdf": "^5.7.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-sticky-nav": "^4.0.6",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
